--- a/app.json
+++ b/app.json
@@ -18,6 +18,12 @@
 				"icon": "github"
 			}
 		],
-		"notes": []
+		"notes": [
+			{
+				"pattern": "^/notes/web-dev/",
+				"label": "Web Dev",
+				"expanded": false
+			}
+		]
 	}
 }
