--- a/.app/package.json
+++ b/.app/package.json
@@ -35,6 +35,7 @@
     "style-dictionary": "^3.8.0"
   },
   "dependencies": {
+    "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "alpinejs": "^3.10.5",
     "feather-icons": "^4.29.0",
     "flexsearch": "^0.7.31",
