--- a/.app/package.json
+++ b/.app/package.json
@@ -21,7 +21,6 @@
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
     "@parcel/transformer-sass": "^2.8.2",
-    "eleventy-plugin-page-assets": "^0.3.0",
     "markdown-it-anchor": "^8.6.6",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-task-checkbox": "^1.0.6",
@@ -35,6 +34,7 @@
     "style-dictionary": "^3.8.0"
   },
   "dependencies": {
+    "@11ty/eleventy-img": "^3.1.0",
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "alpinejs": "^3.10.5",
     "feather-icons": "^4.29.0",
