use sessionStorage to persist the state of the detail element across page refreshes

--- a/app.json
+++ b/app.json
@@ -21,7 +21,8 @@
 		"notes": [
 			{
 				"tags": ["web-dev"],
-				"label": "Web Dev"
+				"label": "Web Dev",
+				"expanded": false
 			}
 		]
 	}
